# nba-win-totals-25-26

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/rosters/rosters_25_26/: atl_2025_26_roster.csv  bkn_2025_26_roster.csv  bos_2025_26_roster.csv  cha_2025_26_roster.csv  chi_2025_26_roster.csv  cle_2025_26_roster.csv  dal_2025_26_roster.csv  den_2025_26_roster.csv  det_2025_26_roster.csv  gsw_2025_26_roster.csv  hou_2025_26_roster.csv  ind_2025_26_roster.csv  lac_2025_26_roster.csv  lal_2025_26_roster.csv  mem_2025_26_roster.csv  mia_2025_26_roster.csv  mil_2025_26_roster.csv  min_2025_26_roster.csv  nop_2025_26_roster.csv  nyk_2025_26_roster.csv  okc_2025_26_roster.csv  orl_2025_26_roster.csv  phi_2025_26_roster.csv  phx_2025_26_roster.csv  por_2025_26_roster.csv  sac_2025_26_roster.csv  sas_2025_26_roster.csv  tor_2025_26_roster.csv  uta_2025_26_roster.csv  was_2025_26_roster.csv
docs/examples/: basics.ipynb
docs/nba_api_docs/: endpoint_analysis_format.md  nba_api.json  nba_api_clean.json  update_nba_api_json.py
notebooks/: ppg_trends.ipynb  predict_dub_stats.ipynb  predict_luka_stats.ipynb  sandbox_nba_api_data.ipynb
scripts/roster-data/: update_rosters_2526.py
src/tools/: __init__.py  display_data.py
